fix: unify dialog styling, fix layout shifts

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -129,7 +129,7 @@
 
 @layer base {
   html {
-    scrollbar-gutter: auto;
+    scrollbar-gutter: stable;
   }
   html,
   body {
